--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +27,10 @@
     "\n",
     "\n",
     "def tokenize_inputs(sentences_, events_):\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "    tokenizer = RegexpTokenizer(r'[\\w|\\u200c]+')\n",
     "    sentences_no_punctuation = [tokenizer.tokenize(' '.join(sent)) for sent in sentences_ ]\n",
     "    temp_sentences_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(sentences_no_punctuation)]\n",
-    "    sentences_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
+    "    sentences_tokens = [[word[0] for word in sent if len(word)] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
     "\n",
     "    temp_events_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(events_)]\n",
     "    events_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_events_tokens)]\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +203,8 @@
     "\n",
     "def longest_noun_sequence(sent_,index_):\n",
     "    tags_=[]\n",
-    "    string_=tagger.tag(sent_[index_:] )\n",
-    "    for x in  string_:\n",
+    "    string_=tagger.tag(sent_[index_:])\n",
+    "    for x in string_:\n",
     "        tags_.append( x[1][:1])\n",
     "    listToStr = ''.join([str(elem) for elem in tags_])   \n",
     "    tmp=0\n",
@@ -216,7 +216,7 @@
     "\n",
     "    listToStr2 = ' '.join([str(elem) for elem in sent_[:index_]])  \n",
     "    listToStr3 = ' '.join([str(elem) for elem in sent_[:index_+tmp]])  \n",
-    "    return [sent_[index_:index_+tmp],[len(listToStr2)+1,len(listToStr3)]]"
+    "    return [sent_[index_:index_+tmp],[len(listToStr2),len(listToStr3)]]"
    ]
   },
   {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,13 +271,9 @@
     "    related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]\n",
     "    main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokenized)\n",
     "\n",
-    "    print(\"sentences_main_word_index: \", sentences_main_word_index)\n",
-    "    print(\"related_event: \", related_event)\n",
-    "    print(\"main_word_span\", main_word_span)\n",
-    "\n",
     "    span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
-    "    print(' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]])\n",
-    "    "
+    "    \n",
+    "    return span_list, related_event"
    ]
   },
   {
@@ -289,27 +285,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 104335.92it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2811.20it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 3813.00it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 3669.88it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  6.57it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 16980.99it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 13490.85it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 112147.17it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 11275.01it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 64231.30it/s]\n",
-      "100%|██████████| 1/1 [00:12<00:00, 12.03s/it]\n",
-      "100%|██████████| 10/10 [02:32<00:00, 15.23s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 9218.25it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 22684.18it/s]"
+      "100%|██████████| 10/10 [00:00<00:00, 124460.06it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 4253.86it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 4080.06it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 3254.68it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 4922.89it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 10407.70it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 13981.01it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 61141.46it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 15420.24it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 49402.87it/s]\n",
+      "100%|██████████| 1/1 [00:11<00:00, 11.75s/it]\n",
+      "100%|██████████| 10/10 [01:51<00:00, 11.18s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 7973.96it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 33420.75it/s]"
      ]
     },
     {
@@ -318,8 +314,7 @@
      "text": [
       "sentences_main_word_index:  [3]\n",
       "related_event:  [3]\n",
-      "main_word_span [[11, 18]]\n",
-      "استعفای نخست وزیر بریتانیا می\n"
+      "main_word_span [[11, 18]]\n"
      ]
     },
     {
@@ -331,7 +326,47 @@
     }
    ],
    "source": [
-    "run(\"دو هفته از استعفای نخست وزیر بریتانیا می گذرد.\")"
+    "final_span, final_event = run(\"دو هفته از استعفای نخست وزیر بریتانیا می گذرد.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['استعفای', 'نخست', 'وزیر', 'بریتانیا'], [10, 37]]]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_event"
    ]
   }
  ],
