--- a/CA1/CA1/Notebooks/test.ipynb
+++ b/CA1/CA1/Notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 157090.04it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 82420.82it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 95325.09it/s]\n"
      ]
     }
    ],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,10 +75,10 @@
     "\n",
     "\n",
     "def tokenize_inputs(sentences_, events_):\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "    tokenizer = RegexpTokenizer(r'[\\w|\\u200c]+')\n",
     "    sentences_no_punctuation = [tokenizer.tokenize(' '.join(sent)) for sent in sentences_ ]\n",
     "    temp_sentences_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(sentences_no_punctuation)]\n",
-    "    sentences_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
+    "    sentences_tokens = [[word[0] for word in sent if len(word)] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
     "\n",
     "    temp_events_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(events_)]\n",
     "    events_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_events_tokens)]\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,22 +243,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagger = POSTagger(model='../Resources/postagger.model')\n",
+    "\n",
+    "def longest_noun_sequence(sent_,index_):\n",
+    "    tags_=[]\n",
+    "    string_=tagger.tag(sent_[index_:])\n",
+    "    for x in string_:\n",
+    "        tags_.append( x[1][:1])\n",
+    "    listToStr = ''.join([str(elem) for elem in tags_])   \n",
+    "    tmp=0\n",
+    "    for i in range(0,len(listToStr)+1):\n",
+    "      if listToStr[i:i+1]=='N':\n",
+    "        tmp+=1\n",
+    "      else:\n",
+    "        break\n",
+    "\n",
+    "    listToStr2 = ' '.join([str(elem) for elem in sent_[:index_]])  \n",
+    "    listToStr3 = ' '.join([str(elem) for elem in sent_[:index_+tmp]])  \n",
+    "    return [sent_[index_:index_+tmp],[len(listToStr2),len(listToStr3)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 4161.02it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 4471.54it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 5516.64it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  5.39it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 10951.19it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 13953.11it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 96199.63it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 17189.77it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 51974.03it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 12927.65it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 2595.31it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 4293.48it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 10894.30it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 52795.43it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 14217.98it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 85250.08it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 69518.85it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 54755.93it/s]\n"
      ]
     }
    ],
@@ -269,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:11<00:00, 11.55s/it]\n"
+      "100%|██████████| 9/9 [02:17<00:00, 15.23s/it]\n"
      ]
     }
    ],
@@ -299,14 +326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:51<00:00, 11.10s/it]\n"
+      "100%|██████████| 10/10 [02:19<00:00, 13.98s/it]\n"
      ]
     }
    ],
@@ -318,15 +345,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 10512.04it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 30840.47it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 16950.49it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 29351.32it/s]\n"
      ]
     }
    ],
@@ -339,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sentences_main_word_index:  [3]\n",
-      "related_event:  [3]\n",
-      "main_word_span [[11, 18]]\n"
+      "sentences_main_word_index:  [0, 3, 4, 2, 6, 8, 0, 6, 10]\n",
+      "related_event:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
+      "main_word_span [[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [-1, 4], [51, 54]]\n"
      ]
     }
    ],
@@ -383,99 +410,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tagger = POSTagger(model='../Resources/postagger.model')\n",
-    "\n",
-    "# def longest_noun_sequence(sent_,index_):\n",
-    " \n",
-    "#     tags_=[]\n",
-    "#     string_=tagger.tag(sent_[index_:] )\n",
-    "#     for x in  string_:\n",
-    "#         tags_.append( x[1][0])\n",
-    "#     counter = 0\n",
-    "#     for i in range(len(tags_)):\n",
-    "#       if tags_[i] == 'N':\n",
-    "#         counter += 1\n",
-    "#       else:\n",
-    "#         break\n",
-    "      \n",
-    "#     return [' '.join(sent_).find(sent_[index_]), ' '.join(sent_).find(sent_[index_+counter-1]) + len(sent_[index_+counter-1])], ' '.join(sent_[index_ : index_ + counter])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tagger = POSTagger(model='../Resources/postagger.model')\n",
-    "\n",
-    "def longest_noun_sequence(sent_,index_):\n",
-    "    tags_=[]\n",
-    "    string_=tagger.tag(sent_[index_:] )\n",
-    "    for x in  string_:\n",
-    "        tags_.append( x[1][:1])\n",
-    "    listToStr = ''.join([str(elem) for elem in tags_])   \n",
-    "    tmp=0\n",
-    "    for i in range(0,len(listToStr)+1):\n",
-    "      if listToStr[i:i+1]=='N':\n",
-    "        tmp+=1\n",
-    "      else:\n",
-    "        break\n",
-    "\n",
-    "    listToStr2 = ' '.join([str(elem) for elem in sent_[:index_]])  \n",
-    "    listToStr3 = ' '.join([str(elem) for elem in sent_[:index_+tmp]])  \n",
-    "    return [sent_[index_:index_+tmp],[len(listToStr2)+1,len(listToStr3)]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "span_list = longest_noun_sequence(sentences_tokenized[0], related_event[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "استعفای نخست وزیر بریتانیا می\n"
-     ]
-    }
-   ],
-   "source": [
-    "span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
-    "print(' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'استعفای نخست وزیر بریتانیا می'"
+       "[[['گفتگوهای', 'صلح', 'اوکراین'], [0, 20]],\n",
+       " [['استعفای', 'نخست', 'وزیر', 'بریتانیا'], [10, 37]],\n",
+       " [['حمله'], [19, 24]],\n",
+       " [['افزایش', 'بهای', 'طلا'], [10, 26]],\n",
+       " [['درگذشت', 'امیرکبیر'], [26, 42]],\n",
+       " [['واردات', 'میوه'], [39, 51]],\n",
+       " [['دیدار', 'پوتین'], [0, 11]],\n",
+       " [['تحریم\\u200cهای'], [32, 42]],\n",
+       " [['کسب', 'مدال'], [50, 59]]]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]]"
+    "span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
+    "span_list"
    ]
   }
  ],
